--- a/views/items/index.ejs
+++ b/views/items/index.ejs
@@ -2,13 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="modal.js"></script>
   </head>
   <body>
     <h4>Items:</h4>
     <% items.forEach( item => { %>
-      <p>
-        <%= item.id %> : <%= item.name %>
+    <div id="item<%= item.id %>">
+      <p><%= item.name %></p>
+      <p class="modal hide-class">
+        <%= item.description %>
+        <button onclick="modalHidden(<%= item.id %>)">X</button>
       </p>
+      <button onclick="modalAppear(<%= item.id %>)">click to see more</button>
+    </div>
     <% }) %>
   </body>
 </html>
